Fix Java 11 deprecation warnings: newInstance()
git-svn-id: svn+ssh://svn.code.sf.net/p/omegat/svn/trunk@10609 b0d8beef-cb45-0410-a8e4-c0d495c3b779